# Spite

./: .gitignore  CMakeLists.txt  CMakePresets.json  Grammar.txt  LinkerExamples.txt  README.md  Spite.natvis  Spite_Lang.cpp  Spite_Lang.h  TestSpec.sp  build.bat  build.sh
Compile/Debug/: Interop-Debug.sp
Compile/Release/: Interop-Release.sp
Examples/Basics/: Basics.sp
Examples/Compile/: Compile.sp
Examples/Functions/: Functions.sp
Examples/Generics/: Generics.sp
Examples/HelloWorld/: HelloWorld.sp
Examples/State/: State.sp
Examples/Types/: Types.sp
Runtime/Containers/: Allocator.sp  Allocators.sp  Arena.sp  Array.sp  Logic.sp  SafeArray.sp  SmallArray.sp
Runtime/Engine/ECS/: ECS.sp
Runtime/Engine/ECS/Component/: Component.sp
Runtime/Engine/ECS/Entity/: Entity.sp
Runtime/Engine/ECS/System/: System.sp
Runtime/Global/: Allocator.sp  Array.sp  Common.sp  Map.sp  Memory.sp  Runtime.sp  Set.sp  String.sp  StringView.sp
Runtime/Global/Compile/: Interop.sp  Meta.sp
Runtime/Global/Meta/: Extensions.sp  Meta.sp  Type.sp
Runtime/Logic/: Logic.sp
Runtime/Math/: Math.sp
Runtime/Math/Matrix/: Matrix3.sp  Matrix4.sp
Runtime/Math/Quaternion/: Quaternion.sp
Runtime/Math/Vec/: Normalized.sp  Vec2.sp  Vec3.sp  Vec4.sp
Runtime/OS/: File.sp  OS.sp  Path.sp
Runtime/Vec/: Vec3.sp
Src/: Spite_Lang.cpp  Spite_Lang.h
Src/Checking/: ASTNodeChecker.h  Checker.h  CheckerContext.h  CheckerUtils.h  DeclarationChecker.h  DeferredChecker.h  DefinitionChecker.h  ExprChecker.h  GenericInference.h  PackageChecker.h  TypeChecker.h  TypeInference.h
Src/Config/: Args.txt  BuildConfig.h  Config.h
Src/Containers/: Arena.h  Array.h  FixedRingBuffer.h  Flags.h  InplaceString.h  StringView.h  Table.h  Trie.h  TupleLookup.h
Src/IR/: IR.h
Src/IR/Interpreter/: Debugger.cpp  Debugger.h  Decompiler.h  ExternCall.cpp  ExternCall.h  Interpreter.h  InterpreterExtension.cpp  InterpreterExtension.h  InterpreterUtils.h
Src/IR/Interpreter/Extensions/: CallStackExt.cpp  CallStackExt.h  ExtensionUI.cpp  ExtensionUI.h  Extensions.h
Src/Log/: Errors.h  Logger.cpp  Logger.h
Src/Lower/: Lower.h  LowerContext.h  LowerDeclarations.h  LowerDefinitions.h  LowerUtils.h
Src/Output/C/: CBuilder.h
Src/Output/LLVM/: LLVMBuilder.h  LLVMCompile.h  LLVMContext.h  LLVMEntry.h  LLVMOptimize.h  LLVMTypes.h
Src/Parsing/: Parser.cpp  Parser.h  Position.h  Scanner.h
Src/Syntax/: Expr.h  GlobalTable.h  ScopeUtils.h  Stmnt.h  SymbolTable.h  Syntax.h  SyntaxUtils.cpp  SyntaxUtils.h  Type.h  TypeInference.h
Src/Tokens/: Token.h  TokenTree.h  Tokens.h
Src/Utils/: Profiler.h  Utils.h
